--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -239,11 +239,9 @@
                             Langoy Para sa Kaluwasan (Swim For Safety)</h4>
                         <p class="mbr-text mbr-fonts-style display-4">The project was conceived after a banca/boat full of youth capsized<br>    during a mangrove planting event in October 2011 and  the flash  <br>    flood in 1991 that killed 8000 people.</p>
                     </div>
-                    <div class="mbr-section-btn text-center">
-                        <a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page2.html#content5-p" class="btn btn-primary display-4">
                             Learn More
-                        </a>
-                    </div>
+                        </a></div>
                 </div>
             </div>
 
@@ -323,7 +321,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZOwQ9WBF1JlHFuFc3QaH2Q7LLfNcF/gWZ/GnQzT2ZXkxM3dt9yu+OuhM9BAm0bF6iL3Z4WODng+k/r8IGrmdCueRFyKjzhxq79/NRk7ylrS8ANLEYbBWATXe+WLaJuRH">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aHiPWceM+007NezLEF+IEBHYVFJTHyoUtckZ2Gipb3UqHIETeVjyzdou7yYivjFUjQ6uye0EeBFbDeF3wcdSMfZrOkiRy3HWTOefgly8rRK6s23DuTiTsmfJi3Op4NHU">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
