--- a/page2.html
+++ b/page2.html
@@ -60,13 +60,13 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="https://mobirise.com"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
                     <font face="MobiriseIcons"><span style="font-size: 25.6px;">Contact Us</span></font> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-rqsTBQYDKF" id="content5-p">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-rqsTBQYDKF" id="content5-p">
 
     
 
@@ -293,7 +293,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
